--- a/carrito.html
+++ b/carrito.html
@@ -59,7 +59,7 @@
     </div>
 
     <script src="./js/carrito.js"></script>
-    <script src="./js/menu.js"></script>
+    <script src="./js/main.js"></script>
 
 </body>
 </html>
